# xpublish-config

./: .gitignore  MANIFEST.in  Readme.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
tests/: a_local_plugin.py  test_config.json  test_config.toml  test_config.yaml  test_config_loading.py  test_load_from_file.py  test_merge_configs.py
tests/__snapshots__/: test_config_loading.ambr  test_load_from_file.ambr
xpublish_config/: __init__.py  config.py  load_from_file.py  merge_configs.py
