[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]

[project]
name = "xpublish-config"
description = ""
readme = "README.md"
keywords = [
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dynamic = [
  "dependencies",
  "version",
]
[project.optional-dependencies]
toml = [
  "tomlkit>=0.11.6",
]
yaml = [
  "ruamel.yaml>=0.17",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
write_to = "xpublish_config/_version.py"

[tool.black]
line-length = 100

[tool.ruff]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "PL",  # pylint
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
line-length = 100

[tool.ruff.per-file-ignores]
"docs/source/conf.py" = ["E402", "D100", "A001"]
"tests/*.py" = ["PLR2004", "D103", "D100", "D101"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.check-manifest]
ignore = ["xpublish_config/_version.py"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true
